Bug 566639 - Make Linux libsecret integration work for all archs
Make sure that field order list is immutable. Most likely not the reason
for test failures but to be on the safe side.

Change-Id: I124dc75bb76f6b29b94e398f47c53ee8c9317807
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>