@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2020 Red Hat Inc.
+ * Copyright (c) 2020, 2021 Red Hat Inc.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -7,13 +7,12 @@
  * https://www.eclipse.org/legal/epl-2.0/
  *
  * SPDX-License-Identifier: EPL-2.0
- * 
+ *
  * Contributors:
  *     Red Hat Inc. - initial version
  *******************************************************************************/
 package org.eclipse.equinox.internal.security.linux;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.sun.jna.Pointer;
@@ -23,12 +22,14 @@ public class GError extends Structure {
 	int domain;
 	int code;
 	String message;
+
 	public GError(Pointer p) {
 		super(p);
 		read();
 	}
+
 	@Override
 	protected List<String> getFieldOrder() {
-		return Arrays.asList(new String[] { "domain", "code", "message" }); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+		return List.of("domain", "code", "message"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
 	}
 }
