@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2020 Red Hat Inc.
+ * Copyright (c) 2020, 2021 Red Hat Inc.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -7,56 +7,44 @@
  * https://www.eclipse.org/legal/epl-2.0/
  *
  * SPDX-License-Identifier: EPL-2.0
- * 
+ *
  * Contributors:
  *     Red Hat Inc. - initial version
  *******************************************************************************/
 package org.eclipse.equinox.internal.security.linux;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.sun.jna.Pointer;
 import com.sun.jna.Structure;
 
 public class SecretSchema extends Structure {
-    public String name;
-    public int flags;
-    public SecretSchemaAttribute[] attributes = new SecretSchemaAttribute[32];
+	public String name;
+	public int flags;
+	public SecretSchemaAttribute[] attributes = new SecretSchemaAttribute[32];
 
-    /* <private> */
-    public int reserved;
-    public Pointer reserved1;
-    public Pointer reserved2;
-    public Pointer reserved3;
-    public Pointer reserved4;
-    public Pointer reserved5;
-    public Pointer reserved6;
-    public Pointer reserved7;
-    
-    public SecretSchema(String name, int flags, SecretSchemaAttribute ...attributes) {
-    	this.name = name;
-    	this.flags = flags;
-    	for (int i = 0; i < attributes.length; ++i) {
-    		this.attributes[i] = attributes[i];
-    	}
-    	write();
-    }
+	/* <private> */
+	public int reserved;
+	public Pointer reserved1;
+	public Pointer reserved2;
+	public Pointer reserved3;
+	public Pointer reserved4;
+	public Pointer reserved5;
+	public Pointer reserved6;
+	public Pointer reserved7;
 
-    @Override
+	public SecretSchema(String name, int flags, SecretSchemaAttribute... attributes) {
+		this.name = name;
+		this.flags = flags;
+		for (int i = 0; i < attributes.length; ++i) {
+			this.attributes[i] = attributes[i];
+		}
+		write();
+	}
+
+	@Override
 	protected List<String> getFieldOrder() {
-		return Arrays.asList(new String[] {
-				"name", //$NON-NLS-1$
-				"flags", //$NON-NLS-1$
-				"attributes", //$NON-NLS-1$
-				"reserved", //$NON-NLS-1$
-				"reserved1", //$NON-NLS-1$
-				"reserved2", //$NON-NLS-1$
-				"reserved3", //$NON-NLS-1$
-				"reserved4", //$NON-NLS-1$
-				"reserved5", //$NON-NLS-1$
-				"reserved6", //$NON-NLS-1$
-				"reserved7", //$NON-NLS-1$
-		});
+		return List.of("name", "flags", "attributes", "reserved", "reserved1", "reserved2", "reserved3", "reserved4", //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$ //$NON-NLS-5$ //$NON-NLS-6$ //$NON-NLS-7$ //$NON-NLS-8$
+				"reserved5", "reserved6", "reserved7"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
 	}
 }
